<resources>
    <string name="app_name">WeFix</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="top_icon">TOP ICON</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="logo">Logo</string>
    <string name="manage_addresses">Manage Address</string>
    <string name="add_a_new_address">Add A New Address</string>
    <string name="name">Name</string>
    <string name="abc_gmail_com">abc@gmail.com</string>
    <string name="phone_number">Phone Number</string>
    <string name="_10_digit_phone_number">10-digit Phone Number</string>
    <string name="pin_code">Pin Code</string>
    <string name="_1234567">1234567</string>
    <string name="address">Address</string>
    <string name="address_area_and_street">Address(Area and Street)</string>
    <string name="city">City</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="rs">RS:</string>
    <string name="text">text</string>
    <string name="current_address">Current Address</string>
    <string name="add">Add</string>
    <string name="product_company_nname">Product Company \nName:</string>
    <string name="company_name">Company name</string>
    <string name="problem_description">Problem Description:</string>
    <string name="problem_des">Problem des</string>
    <string name="payment_method">Payment Method</string>
    <string name="pos_pay_on_service">POS(Pay on Service)</string>
    <string name="new_address">New Address</string>
    <string name="final_">Final</string>
    <string name="contact_us">Contact us</string>
    <string name="durgapur">Kolkata</string>
    <string name="west_bengal_npin_713206">EZRA STREET 1 TO 11 66 67 P 44 P 46 P 53 KOLKATA WEST BENGAL 700001</string>
    <string name="_0325_2314960">8509200713</string>
    <string name="_123456789">8509200714</string>
    <string name="wefix_sitdoxford_org">https://wefixservice.in</string>
    <string name="create_new_account">Create New Account</string>
    <string name="username">Username</string>
    <string name="image">Image</string>
    <string name="reenter_password">ReEnter Password</string>
    <string name="login_page">Login Page</string>
    <string name="full_log_details">Full Log Details</string>
    <string name="log_details">Log Details</string>
    <string name="customer_details">Customer Details</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="company">Company</string>
    <string name="work_type">Work Type</string>
    <string name="status">Status</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="register_now">Register Now</string>
    <string name="login_or_create_account">Login or Create Account</string>
    <string name="electronic_services">Electronic Services</string>
    <string name="add_your_address">Add Your Address</string>
    <string name="payment_history">Payment History</string>
    <string name="tax_invoice">Tax Invoice</string>
    <string name="aahan_commrcial_and_co">Aahan Commercial &amp; Co</string>
    <string name="gstin_uin_19abmfa5193k1zu">GSTIN/UIN: 19ABMFA5193K1ZU</string>
    <string name="contact_8509200714">Contact: 8509200714</string>
    <string name="wefix_aahan_gmail_com">wefix.aahan@gmail.com</string>
    <string name="email_wefix_aahan_gmail_com">Email: wefix.aahan@gmail.com</string>
    <string name="web_site_www_wefixservice_in">Web Site: www.wefixservice.in</string>
    <string name="west_bengal_19">West Bengal-19</string>
    <string name="customer_name">Customer Name</string>
    <string name="call_log_id_no">Call Log ID No</string>
    <string name="invoice_no">Invoice No</string>
    <string name="payment_type">Payment Type</string>
    <string name="pos">Pos</string>
    <string name="description_of_nitem_parts">Description of\nItem Parts</string>
    <string name="quantity">Quantity</string>
    <string name="rate">Rate</string>
    <string name="cgst_9">CGST 9%</string>
    <string name="sgst_9">SGST 9%</string>
    <string name="parts_amount">Parts Amount</string>
    <string name="total_amount">Total Amount</string>
    <string name="company_s_pan_abmfa5193k">Company\'s Pan ABMFA5193K</string>
    <string name="aahan_commercial_and_co">Aahan Commercial &amp; Co</string>
    <string name="download_invoice">Download Invoice</string>
    <string name="show_invoice">Show Invoice</string>
    <string name="hello">Hello</string>
    <string name="your">Your</string>
    <string name="id">ID</string>
    <string name="id_number">ID Number</string>
    <string name="from">From</string>
    <string name="made_in_india">Made In India</string>
    <string name="delete">Delete</string>
    <string name="cancelled_logs">Cancelled Logs</string>
    <string name="closed_logs">Closed Logs</string>
    <string name="search_for_product_and_more">Search for Product and More</string>
    <string name="add_a_call_log">Add a Call Log</string>
    <string name="open_logs">Open Logs</string>
    <string name="log_id">Log ID#</string>
    <string name="details">Details</string>
    <string name="cancel_log">Cancel Log</string>
    <string name="log_placed">Log Placed</string>
    <string name="go">GO</string>
    <string name="loading">Loading…</string>
    <string name="add_logs">Add Logs</string>
    <string name="home">Home</string>
    <string name="log_history">Log History</string>
    <string name="logout">Logout</string>
    <string name="setting">Settings</string>
    <string name="call_logs">Call Logs</string>
    <string name="note_parts_rates_show_only_on_invoice">Note:- Parts rates show only on invoice</string>
    <string name="parts_rates_show_only_on_invoice_please_press_go_button">Parts Rates show only on Invoice Please Press Go Button</string>
    <string name="important_notes_after_technician_visit_if_you_don_t_agree_to_take_service_then_must_be_paid_rs_268_visit_charge_mandatory">Important notes:After technician visit if you don’t agree to take Service then must be paid Rs 268/- visit charge (Mandatory).</string>
    <string name="submit">SUBMIT</string>

</resources>
