<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:title="@string/home"
        app:showAsAction="never" />

    <item
        android:id="@+id/payment_history"
        android:title="@string/payment_history"
        app:showAsAction="never" />

    <item
        android:id="@+id/logs_history"
        android:title="@string/log_history"
        app:showAsAction="never" />

    <item
        android:id="@+id/contact"
        android:title="@string/contact_us"
        app:showAsAction="never" />

    <item
        android:id="@+id/setting"
        android:title="@string/setting"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="never" />

</menu>