<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:icon="@drawable/home_asset"
            android:title="@string/home" />

        <item
            android:id="@+id/add_address"
            android:icon="@drawable/billing_address_asset"
            android:title="@string/manage_addresses" />

        <item
            android:id="@+id/call_log"
            android:icon="@drawable/log_asset"
            android:title="@string/call_logs" />

        <item
            android:id="@+id/payment_history"
            android:icon="@drawable/payment_history_asset"
            android:title="@string/payment_history" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout_asset"
            android:title="@string/logout" />

    </group>

</menu>