<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#D5DBF3">

        <include
            android:id="@+id/toolbar"
            layout="@layout/bar_layout" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_below="@id/toolbar"
            android:layout_marginStart="30dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="131dp"
            android:elevation="8dp"
            android:paddingBottom="200dp"
            app:cardCornerRadius="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                android:text="@string/hello"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="100dp"
                android:hint="@string/name"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="200dp"
                android:text="@string/your"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="260dp"
                android:padding="10dp"
                android:text="@string/id"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="310dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/id_number"
                android:padding="10dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="370dp"
                android:padding="10dp"
                android:text="@string/email"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="420dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/abc_gmail_com"
                android:padding="10dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="480dp"
                android:padding="10dp"
                android:text="@string/phone_number"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="530dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/_123456789"
                android:padding="10dp"
                android:textSize="18sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</ScrollView>