<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NewAddressActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar"
            layout="@layout/bar_layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:orientation="vertical"
            android:padding="20dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/add_your_address"
                        android:textColor="@color/secondColor"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/name"
                        android:textColor="#000"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:autofillHints="@string/name"
                        android:background="@drawable/custom_edittext"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:paddingStart="10dp"
                        android:paddingEnd="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/email"
                        android:textColor="#000"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:autofillHints="@string/abc_gmail_com"
                        android:background="@drawable/custom_edittext"
                        android:hint="@string/abc_gmail_com"
                        android:inputType="textEmailAddress"
                        android:paddingStart="10dp"
                        android:paddingEnd="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/phone_number"
                        android:textColor="#000"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:autofillHints="@string/_10_digit_phone_number"
                        android:background="@drawable/custom_edittext"
                        android:hint="@string/_10_digit_phone_number"
                        android:inputType="phone"
                        android:paddingStart="10dp"
                        android:paddingEnd="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/pin_code"
                        android:textColor="#000"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/pin_code"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:autofillHints="@string/_1234567"
                        android:background="@drawable/custom_edittext"
                        android:hint="@string/_1234567"
                        android:inputType="number"
                        android:paddingStart="10dp"
                        android:paddingEnd="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/address"
                        android:textColor="#000"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_marginTop="10dp"
                        android:autofillHints="@string/address_area_and_street"
                        android:background="@drawable/custom_edittext"
                        android:hint="@string/address_area_and_street"
                        android:inputType="textMultiLine"
                        android:paddingStart="10dp"
                        android:paddingEnd="5dp"
                        android:textAlignment="textStart" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/city"
                        android:textColor="#000"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/city"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:autofillHints="@string/city"
                        android:background="@drawable/custom_edittext"
                        android:hint="@string/city"
                        android:inputType="text"
                        android:paddingStart="10dp"
                        android:paddingEnd="5dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/save"
                            android:layout_width="140dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp"
                            android:background="@drawable/custom_btn2"
                            android:text="@string/save"
                            android:textColor="#fff" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
