<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AddAddressFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/googlesansmedium"
            android:text="@string/manage_addresses"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/add_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_btn2"
                    android:drawableStart="@drawable/add_asset"
                    android:fontFamily="@font/googlesansmedium"
                    android:paddingStart="20dp"
                    android:paddingEnd="5dp"
                    android:text="@string/add_a_new_address"
                    android:textAlignment="textStart"
                    android:textColor="#fff" />

                <LinearLayout
                    android:id="@+id/linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="40dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/googlesansmedium"
                        android:text="@string/add_a_new_address"
                        android:textColor="@color/secondColor"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/googlesansmedium"
                        android:text="@string/name"
                        android:textColor="#000"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:autofillHints="@string/name"
                        android:background="@drawable/custom_edittext"
                        android:fontFamily="@font/googlesansregular"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:paddingStart="10dp"
                        android:paddingEnd="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/googlesansmedium"
                        android:text="@string/email"
                        android:textColor="#000"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:autofillHints="@string/abc_gmail_com"
                        android:background="@drawable/custom_edittext"
                        android:fontFamily="@font/googlesansregular"
                        android:hint="@string/abc_gmail_com"
                        android:inputType="textEmailAddress"
                        android:paddingStart="10dp"
                        android:paddingEnd="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/googlesansmedium"
                        android:text="@string/phone_number"
                        android:textColor="#000"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:autofillHints="@string/_10_digit_phone_number"
                        android:background="@drawable/custom_edittext"
                        android:fontFamily="@font/googlesansregular"
                        android:hint="@string/_10_digit_phone_number"
                        android:inputType="phone"
                        android:paddingStart="10dp"
                        android:paddingEnd="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/googlesansmedium"
                        android:text="@string/pin_code"
                        android:textColor="#000"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/pin_code"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:autofillHints="@string/_1234567"
                        android:background="@drawable/custom_edittext"
                        android:fontFamily="@font/googlesansregular"
                        android:hint="@string/_1234567"
                        android:inputType="number"
                        android:paddingStart="10dp"
                        android:paddingEnd="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/googlesansmedium"
                        android:text="@string/address"
                        android:textColor="#000"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_marginTop="10dp"
                        android:autofillHints="@string/address_area_and_street"
                        android:background="@drawable/custom_edittext"
                        android:fontFamily="@font/googlesansregular"
                        android:hint="@string/address_area_and_street"
                        android:inputType="textMultiLine"
                        android:paddingStart="10dp"
                        android:paddingEnd="5dp"
                        android:textAlignment="textStart" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/googlesansmedium"
                        android:text="@string/city"
                        android:textColor="#000"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/city"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:autofillHints="@string/city"
                        android:background="@drawable/custom_edittext"
                        android:fontFamily="@font/googlesansregular"
                        android:hint="@string/city"
                        android:inputType="text"
                        android:paddingStart="10dp"
                        android:paddingEnd="5dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/save"
                            android:layout_width="140dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp"
                            android:background="@drawable/custom_btn2"
                            android:fontFamily="@font/googlesansmedium"
                            android:text="@string/save"
                            android:textColor="#fff" />

                        <TextView
                            android:id="@+id/cancel"
                            android:layout_width="140dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="60dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp"
                            android:fontFamily="@font/googlesansmedium"
                            android:text="@string/cancel"
                            android:textColor="@color/secondColor"
                            android:textSize="18sp" />

                    </LinearLayout>

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/address_list_recycler_view" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</ScrollView>